two different network configs depending on node type

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,13 +1,7 @@
 akka {
+  loglevel = "DEBUG"
   actor {
     # provider=remote is possible, but prefer cluster
     provider = remote
-  }
-  remote {
-    artery {
-      transport = tcp # See Selecting a transport below
-      canonical.hostname = "127.0.0.1" #reachable IP of this host
-      canonical.port = 25520 #the port the actor system should listen on, set to 0 to have it chosen automatically
-    }
   }
 }
