--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,6 +3,7 @@ akka {
   actor {
     # provider=remote is possible, but prefer cluster
     provider = remote
+    allow-java-serialization = on
   }
 }
 myapp {
