Add jar packaging + experimental Docker support

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,8 @@
 akka {
+  loggers = ["akka.event.Logging$DefaultLogger"]
   loglevel = "DEBUG"
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+  version = "2.6.0"
   actor {
     # provider=remote is possible, but prefer cluster
     provider = remote
