--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -11,5 +11,6 @@ akka {
 }
 myapp {
   nodeType = "none"
-  centralEntityAddress = "127.0.0.1:25521"
+  centralEntityAddress = "127.0.1.1"
+  centralEntityPort = "25520"
 }
