--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -11,6 +11,6 @@ akka {
 }
 myapp {
   nodeType = "none"
-  centralEntityAddress = "127.0.1.1"
+  centralEntityAddress = "127.0.0.1" # 127.0.1.1 for linux
   centralEntityPort = "25520"
 }
