--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,11 +1,18 @@
 akka {
+  loggers = ["akka.event.Logging$DefaultLogger"]
+  actor.warn-about-java-serializer-usage = false
   loglevel = "DEBUG"
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+  version = "2.6.0"
   actor {
     # provider=remote is possible, but prefer cluster
     provider = remote
+    allow-java-serialization = on
   }
 }
 myapp {
+  mBits = 10
   nodeType = "none"
-  centralEntityAddress = "127.0.0.1:25521"
+  centralEntityAddress = "127.0.0.1" # 127.0.1.1 for linux
+  centralEntityPort = "25520"
 }
