--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,9 +9,16 @@ akka {
     provider = remote
     allow-java-serialization = on
   }
+  remote {
+    artery {
+      transport = tcp # See Selecting a transport below
+      canonical.hostname = "127.0.0.1" #reachable IP of this host
+      canonical.port = 0 #the port the actor system should listen on, set to 0 to have it chosen automatically
+    }
+  }
 }
 myapp {
-  mBits = 10
+  mBits = 16
   nodeType = "none"
   centralEntityAddress = "127.0.0.1" # 127.0.1.1 for linux
   centralEntityPort = "25520"
